--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <h1>Today I Learned!</h1>
         </div>
 
-        <button>Share a fact</button>
+        <button class="btn btn-large">Share a fact</button>
       </header>
       <form class="fact-form">
         <input type="text" placeholder="Share a fact with the world..." />
@@ -34,19 +34,19 @@
           <option value="science">Science</option>
           <option value="finance">Finance</option>
         </select>
-        <button>Post</button>
+        <button class="btn btn-large">Post</button>
       </form>
       <main class="main">
         <aside>
           <ul>
-            <li>
-              <button>All</button>
+            <li class="category">
+              <button class="btn btn-all-categories">All</button>
             </li>
-            <li>
-              <button>Technology</button>
+            <li class="category">
+              <button class="btn btn-category" style="background-color: #3b82f6">Technology</button>
             </li>
-            <li>
-              <button>Science</button>
+            <li class="category">
+              <button class="btn btn-category" style="background-color: #eab308">Science</button>
             </li>
           </ul>
         </aside>
@@ -55,7 +55,7 @@
             <li class="fact">
               <p>
                 "React is being developed by Meta (formerly facebook)
-                <a href="https://opensource.fb.com/" target="_blank"
+                <a class="source" href="https://opensource.fb.com/" target="_blank"
                   >(Source)</a
                 >
               </p>
@@ -73,7 +73,7 @@
                 Millennial dads spend 3 times as much time with their kids than
                 their fathers spent with them. In 1982, 43% of fathers had never
                 changed a diaper. Today, that number is down to 3%
-                <a
+                <a class="source"
                   href="https://www.mother.ly/parenting/millennial-dads-spend-more-time-with-their-kids"
                   target="_blank"
                   >(Source)</a
