--- a/index.html
+++ b/index.html
@@ -43,19 +43,32 @@
               <button class="btn btn-all-categories">All</button>
             </li>
             <li class="category">
-              <button class="btn btn-category" style="background-color: #3b82f6">Technology</button>
+              <button
+                class="btn btn-category"
+                style="background-color: #3b82f6"
+              >
+                Technology
+              </button>
             </li>
             <li class="category">
-              <button class="btn btn-category" style="background-color: #eab308">Science</button>
+              <button
+                class="btn btn-category"
+                style="background-color: #eab308"
+              >
+                Science
+              </button>
             </li>
           </ul>
         </aside>
         <section>
-          <ul>
+          <ul class="facts-list">
             <li class="fact">
               <p>
                 "React is being developed by Meta (formerly facebook)
-                <a class="source" href="https://opensource.fb.com/" target="_blank"
+                <a
+                  class="source"
+                  href="https://opensource.fb.com/"
+                  target="_blank"
                   >(Source)</a
                 >
               </p>
@@ -73,15 +86,14 @@
                 Millennial dads spend 3 times as much time with their kids than
                 their fathers spent with them. In 1982, 43% of fathers had never
                 changed a diaper. Today, that number is down to 3%
-                <a class="source"
+                <a
+                  class="source"
                   href="https://www.mother.ly/parenting/millennial-dads-spend-more-time-with-their-kids"
                   target="_blank"
                   >(Source)</a
                 >
               </p>
-              <span class="tag" style="background-color: #eab308"
-                >society</span
-              >
+              <span class="tag" style="background-color: #eab308">society</span>
               <div class="vote-buttons">
                 <button>👍 11</button>
                 <button>😲 2</button>
